<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.UserOnboardingActivity" tools:background="@color/colorPrimary" android:padding="30dp">


    <TextView
            android:text="@string/welcome_to_shush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcomeToShushText"
            android:layout_centerHorizontal="false" android:layout_marginTop="50dp" android:textColor="@color/white"
            android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/the_fully_end_to_end_encrypted_messaging_app_that_doesn_t_fingerprint_you_or_store_any_identifying_information_about_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcomeToShushDescriptorText"
            android:textColor="@color/white" android:textSize="18sp"
            android:layout_alignParentTop="false" android:layout_marginTop="100dp"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/getStartedButton" android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>