<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@color/colorPrimary" android:padding="30dp">


    <TextView
            android:text="@string/start_a_new_conversation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add_contact_title"
            android:layout_centerHorizontal="false" android:textColor="@color/white"
            android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/in_order_to_start_a_new_conversation_you_will_need_the_user_s_public_key_you_are_trying_to_communicate_with_paste_the_key_bellow_to_add_them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add_contact_descriptor"
            android:textColor="@color/white" android:textSize="18sp"
            android:layout_alignParentTop="true" android:layout_marginTop="40dp"/>

    <EditText
            android:id="@+id/add_contact_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textIsSelectable="true"
            android:focusable="true"
            android:longClickable="true"
            android:layout_centerHorizontal="true" android:textColor="@color/dark_grey_two"
            android:background="@color/white" android:height="200dp"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="150dp" android:importantForAutofill="no"/>

    <Button
            android:text="@string/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add_contact_add_button"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:background="@color/white" android:padding="20dp"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

</RelativeLayout>