<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@color/colorPrimary" android:padding="30dp">


    <TextView
            android:text="@string/welcome_to_shush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/oboardingTitleText"
            android:layout_centerHorizontal="false" android:textColor="@color/white"
            android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/the_fully_end_to_end_encrypted_messaging_app_that_doesn_t_fingerprint_you_or_store_any_identifying_information_about_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/onboardingDescriptorText"
            android:textColor="@color/white" android:textSize="18sp"
            android:layout_alignParentTop="true" android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/onboardingKeyTextArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:focusable="true"
            android:longClickable="true"
            android:layout_centerHorizontal="true" android:textColor="@color/dark_grey_two"
            android:background="@color/white" android:height="200dp"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="150dp" />
    <TextView
            android:id="@+id/onboardingNameInput"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginTop="150dp"
            android:visibility="invisible"
              android:layout_centerHorizontal="true" android:textColor="@color/dark_grey_two"
              android:layout_height="30dp"
    />
    <Button
            android:text="@string/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/onboardingActionButton"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>

</RelativeLayout>